--- a/src/main/webapp/css/style.css
+++ b/src/main/webapp/css/style.css
@@ -109,6 +109,14 @@ body{
     font-size: 14px;
 }
 
+.icon{
+	font-size: 27px;
+	color:#7a7a7a;
+}
+.red{
+	color: red;
+}
+
 
 #header .search_box .fake_field{
     position: absolute;
